syntax = "proto3";

option optimize_for = CODE_SIZE;

// https://youtubei.googleapis.com/youtubei/v1/player
message Player {
  Context context = 1;
  string videoId = 2;
  // optional int32 startTimeSecs = 3;
  PlaybackContext playbackContext = 4;
  // Captions captions = 10;
};

message Context {
  Client client = 1;
  AdSignalsInfo adSignalsInfo = 9;
};

message Client {
  optional string hl = 1;
  optional string gl = 2;
  string deviceMake = 12;
  string deviceModel = 13;
  // string visitorData = 14;
  // string userAgent = 15;
  int32 clientName = 16;
  string clientVersion = 17;
  // string browserVersion = 17;
  string osName = 18;
  string osVersion = 19;
  // int32 screenWidthPoints = 37; //??
  // int32 screenHeightPoints = 38; //??
  // optional int32 screenPixelDensity = 41 //??
  // int32 screenWidthPoints = 55; //??
  // int32 screenHeightPoints = 56; //??
  // configInfo configInfo = 62;
  // optional int32 screenDensityFloat = 65; //??
  // optional int32 utcOffsetMinutes = 63;
  // userInterfaceThemType userInterfaceTheme = 78; //??
  string timeZone = 80;
};

message PlaybackContext { ContentPlaybackContext contentPlaybackContext = 1; };

message ContentPlaybackContext {
  // optional string currentUrl = 1; //??
  optional int32 id4 = 4; //??
  optional int32 id6 = 6; //??
  optional int32 id8 = 8; //??
  optional int32 id9 = 9; //??
  // optional string html5Preference = 10; //??
};

message AdSignalsInfo { map<string, string> params = 1; };
